# koompiplay-ver0.2-testing

./: .gitignore  README.md
game-back-end/: .env  Cargo.toml  play.txt
game-back-end/examples/: test.rs
game-back-end/migrations/2020-05-06-104840_create_players/: down.sql
game-back-end/migrations/2020-05-07-045036_create_player/: down.sql  up.sql
game-back-end/migrations/2020-05-18-061842_create_questions/: down.sql  up.sql
game-back-end/migrations/2020-06-24-021727_create_question/: up.sql
game-back-end/migrations/2020-06-24-051806_create_player/: up.sql
game-back-end/src/: datetime.rs  lib.rs  models.rs  qa.rs  schema.rs  score.rs  user.rs
main/: Cargo.toml
main/src/: main.rs
userInfo/: .env  Cargo.toml
userInfo/examples/: test.rs
userInfo/image-bank/: 78LA  CQS5  EOk1  cQrw
userInfo/migrations/2020-06-05-130500_create_user/: up.sql
userInfo/src/: email_addr.rs  lib.rs  models.rs  paste_id.rs  schema.rs  token.rs
zeetomic/: Cargo.toml
zeetomic/examples/: test.rs
zeetomic/migrations/2020-07-01-035325_zeetomic_db/: up.sql
zeetomic/migrations/2020-07-02-031747_zeetomic_db/: up.sql
zeetomic/src/: lib.rs  models.rs  schema.rs  wallet.rs
