[package]
name = "game-back-end"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"]}
rocket_contrib = "0.4.2"
rocket_cors = "0.5.2"
serde_json = "1.0.48"

userInfo = { path = "../userInfo" }

chrono = "0.4.11"
rand = "0.7.3"
#for database
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"