[package]
name = "main"
version = "0.1.0"
authors = ["koompi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
userInfo = { path = "../userInfo" }
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
chrono = { version = "0.4.10", features = ["serde"] }
rocket_cors = "0.5.2"
game-back-end = { path = "../game-back-end" }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["handlebars_templates", "tera_templates"]