[package]
name = "zeetomic"
version = "0.1.0"
authors = ["shenshing <lyshenshing20@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
curl = "0.4.30"
json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
userInfo = { path = "../userInfo" }
rocket = "0.4.2"
rocket_contrib = "0.4.2"
rocket_cors = "0.5.2"
dotenv = "0.9.0"
